<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/detailsForm"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#18AE49"
        android:gravity="center_vertical"
        android:text="@string/detailsFormText"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/firstNameText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/detailsForm"
        app:layout_constraintTop_toBottomOf="@+id/detailsForm" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/firstNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNameLabel"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/lastNameText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/firstNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLabel" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/lastNameLabel"
        app:layout_constraintStart_toStartOf="@+id/firstName"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/genderText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/lastNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLabel" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="201dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/genderLabel"
        app:layout_constraintStart_toStartOf="@+id/lastName"
        app:layout_constraintTop_toTopOf="@+id/genderLabel">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maleText" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:text="@string/femaleText" />
    </RadioGroup>

    <EditText
        android:id="@+id/lastName2"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/age"
        app:layout_constraintStart_toStartOf="@+id/firstName"
        app:layout_constraintTop_toTopOf="@+id/age"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Age on\nDecember 10 2018"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/genderLabel"
        app:layout_constraintTop_toBottomOf="@+id/genderLabel" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#888888"
        android:text="@string/submitLabel"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/age"
        app:layout_constraintTop_toBottomOf="@+id/age" />

</androidx.constraintlayout.widget.ConstraintLayout>